# segmentum-proc

./: .gitignore  CMakeLists.txt  README.md
contour/: CMakeLists.txt  Contour3D.cpp  README.md
graphcut/: CMakeLists.txt  Graphcut2D.cpp  README.md  graphcut.h  graphcutAlgorithm.h  stdafx.cpp
